--- a/src/app/sharied/components/navbar/navbar.component.html
+++ b/src/app/sharied/components/navbar/navbar.component.html
@@ -1,10 +1,12 @@
 <mat-toolbar>
   <span>Vector IT Academy</span>
   <span class="flex-1"></span>
+  <button mat-stroked-button matBadge="1" [matBadgeHidden]="false">
+    To'lovlar
+    <mat-icon>payment</mat-icon>
+  </button>
+
   <!-- <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
     </button> -->
 </mat-toolbar>
